# crafting-interpreters

./: .gitignore  README.md
benchmarks/: bench.sh  profile.sh  zoo.lox
clox-c/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  dll.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
clox-c/practice/: dll.c
jlox-java/: Lox.java  Scanner.java  TokenType.java  hello.java  rebuild.sh
jlox-java/jlox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RpnPrinter.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox-java/tool/: GenerateAst.java
jlox-rust/: Cargo.toml
jlox-rust/src/: Expr.rs  ast_printer.rs  environment.rs  interpreter.rs  lox.rs  main.rs  parser.rs  scanner.rs  stmt.rs  token.rs  token_type.rs
lox-programs/: bacon-class.lox  break.lox  bug-scope.lox  closures.lox  coffee-class-initializer.lox  continue.lox  degenerate-inheritance.lox  empty-class.lox  fib.lox  fibonacci.lox  instances.lox  logical-operators.lox  scope.lox  switch.lox  while.lox
sample-programs/: closures-are-objects.lox  closures.lox  conflicting_scope.lox  for-loops.lox  func-sum.lox  function.lox  inheritance.lox  memory-hog.lox  simple-conditionals.lox  variables.lox
